k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myblog
  namespace: myblog-ns
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: myblog
