k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myblog
  namespace: myblog-ns
spec:
  parentRefs:
    - name: eg
      namespace: default
  hostnames:
    - "www.hendrywilliam.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: myblog
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
